2005-08-24  Douglas Bates  <bates@wisc.edu>

	* R/lme.R (print.intervals.lme): Replace calls to print.matrix by
	print(as.matrix()).

2005-07-25  Douglas Bates  <bates@bates1-home>

	* inst/scripts/ch08.R: Cleaned up examples in ch04, ch06, ch08.

	* src/matrix.h: Include R_Ext/Linpack.h in addition to R_Ext/Applic.h

2005-07-12  Douglas Bates  <bates@bates1-home>

	* inst/scripts/ch01.R: Clean up and check these scripts

	* src/nlmefit.c (gls_loglik): re-write contributed by ?? (I
	accidently deleted the email message).

	* R/lme.R (lme.formula): Use nlminb if available.
	

2005-06-08  Douglas Bates  <bates@bates1-home>

	* R/lme.R (predict.lme): Fixed bug when using a name for a formula
	in original fit. (Reported by Arne.Mueller@sanofi-aventis.com)

2005-05-20  Douglas Bates  <bates@bates1-home>

	* man/contr.SAS.Rd: Removed

2005-04-04  Douglas Bates  <bates@bates1-home>

	* R/newFunc.R: Removed contr.SAS definition as it has been revised
	and moved into the stats package for R-2.1.0 

2005-03-02  Douglas Bates  <bates@bates1-home>

	* src/nlmefit.c (gls_loglik): Replaced rnkm1 by p.

	* po/,inst/po/: Added localization support.

2004-11-04  Douglas Bates  <bates@bates1-home>

	* src/nlmefit.c (dimFree): Fix memory leak reported by Brian Ripley.

2004-11-03  Douglas Bates  <bates@bates1-home>

	* man/varWeights.Rd: Remove all calls to data()

	* man/corExp.Rd: Remove all references to the mva package

2004-08-10  Douglas Bates  <bates@bates1-home>

	* man/pairs.compareFits.Rd: fix syntax errors (new check available
	in R CMD check)

2004-01-14  Douglas Bates  <bates@stat.wisc.edu>

	* man/getCovariate.varFunc.Rd: Syntax correction from Kurt.

2003-12-16  Douglas Bates  <bates@stat.wisc.edu>

	* install.R: Create stored image

2003-08-29  Douglas Bates  <bates@stat.wisc.edu>

	* tests/lme.Rout.save (Coefficients): Now consistent with
	i386-linux result.

	* src/base.h: Replace R_ext/Mathlib.h by Rmath.h

2003-08-09  Douglas Bates  <bates@stat.wisc.edu>
