@@ -1,3 +1,7 @@
+2005-08-25  Douglas Bates  <bates@stat.wisc.edu>
+
+	* R/gls.R: Added option "optimMethod" to gls, gnls, and lme.
+
 2005-08-24  Douglas Bates  <bates@wisc.edu>
 
 	* R/lme.R (print.intervals.lme): Replace calls to print.matrix by
@@ -8,6 +12,11 @@
 	* inst/scripts/ch08.R: Cleaned up examples in ch04, ch06, ch08.
 
 	* src/matrix.h: Include R_Ext/Linpack.h in addition to R_Ext/Applic.h
+
+2005-07-19  Douglas Bates  <bates@stat.wisc.edu>
+
+	* R/gnls.R: Added definition of convIter when using nlminb or when
+	using optim.  Reindented this and other R source files.
 
 2005-07-12  Douglas Bates  <bates@bates1-home>
 
